[metadata]
name = crontab-lexer
version = 1.0.0
description = Pygments lexer for Unix crontab files
author = Frank Rochlitzer
license = MIT
url = https://github.com/b3-it/pygements-lexer-crontab

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pygments>=2.7

[options.entry_points]
pygments.lexers =
    crontab = crontab_lexer.lexer:CrontabLexer

